--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body{
 
 }
 .card__img{
-    background-image: url(img/anh.jpg);
+    background-image: url(img/anh4.jpg);
 
     width: 100px;
     height: 100px;
